--- a/work.html
+++ b/work.html
@@ -2,8 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gisanura Alain's Sample HTML Page</title>
+  <title>Gisanura Alain's Web Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f2f2f2;
+    }
+    table, th, td {
+      border: 1px solid #000;
+      border-collapse: collapse;
+      padding: 8px;
+    }
+    table {
+      width: 50%;
+      margin-bottom: 20px;
+      background-color: #fff;
+    }
+    form {
+      background-color: #fff;
+      padding: 15px;
+      border: 1px solid #ccc;
+      max-width: 300px;
+    }
+    .form-group {
+      margin-bottom: 10px;
+    }
+    label {
+      display: block;
+      margin-bottom: 4px;
+    }
+    input[type="text"],
+    input[type="date"],
+    input[type="tel"] {
+      width: 100%;
+      padding: 6px;
+      box-sizing: border-box;
+    }
+    input[type="submit"] {
+      margin-top: 10px;
+      padding: 8px 16px;
+    }
+    img {
+      width: 200px;
+      margin-top: 50px;
+    }
+    span {
+      background-color: yellow;
+    }
+  </style>
 </head>
+
 <body>
 
   <h1>Welcome to Gisanura Alain's Web Page</h1>
@@ -20,9 +71,63 @@
   </ul>
 
   <p>Here are some useful links:</p>
-  <a href="https://www.example.com">Example Website</a><br>
-  <a href="https://www.wikipedia.org">Wikipedia</a><br>
-  <a href="https://www.mozilla.org">Mozilla</a><br>
+  <nav>
+    <a href="https://www.example.com">Example Website</a><br>
+    <a href="https://www.wikipedia.org">Wikipedia</a><br>
+    <a href="https://www.mozilla.org">Mozilla</a><br>
+  </nav>
+
+  <hr>
+
+
+  <h1>Student Registration Form</h1>
+  <form>
+    <div class="form-group">
+      <label for="fname">First Name:</label>
+      <input type="text" id="fname" name="fname">
+    </div>
+    <div class="form-group">
+      <label for="lname">Last Name:</label>
+      <input type="text" id="lname" name="lname">
+    </div>
+    <div class="form-group">
+      <label for="dob">Date of Birth:</label>
+      <input type="date" id="dob" name="dob">
+    </div>
+    <div class="form-group">
+      <label for="guardian">Guardian Name:</label>
+      <input type="text" id="guardian" name="guardian">
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="e.g. 9876543210">
+    </div>
+    <input type="submit" value="Register">
+  </form>
+
+  <h2>Student List</h2>
+  <table>
+    <tr>
+      <th>Student Name</th>
+      <th>Year</th>
+      <th>Level</th>
+    </tr>
+    <tr>
+      <td>Kalisa</td>
+      <td>2023</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>Bugingo</td>
+      <td>2024</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>Mutesi</td>
+      <td>2025</td>
+      <td>3</td>
+    </tr>
+  </table>
 
 </body>
 </html>
